--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.5",
     "deta": "^1.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
