--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "argon2": "^0.28.5",
     "deta": "^1.1.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
