--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - run: |
           # Create .env
           echo "PROJECT_KEY=${{ env.PROJECT_KEY }}" | tee -a .env > /dev/null
-          echo "ROOT_FOLDER=${{ env.ROOT_FOLDER }}" | tee -a .env > /dev/null
+          echo "SECRET_KEY=${{ env.SECRET_KEY }}" | tee -a .env > /dev/null
 
           # Deploy environment variables
           export DETA_ACCESS_TOKEN=${{ secrets.DETA_TOKEN }}
